--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-reactor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
